# vision

./: .gitignore  LICENSE  README.md  package.xml
config/: k1_rfdetr_vision.yaml  vision.yaml
include/booster_vision/: img_bridge.h  vision_node.h
include/booster_vision/base/: data_logger.hpp  data_syncer.hpp  intrin.h  misc_utils.hpp  pointcloud_process.h  pose.h
include/booster_vision/model/: data_types.h  detector.h  segmentor.h
include/booster_vision/model/trt/: gpu_preprocess.h  rfdetr_impl.h
include/booster_vision/pose_estimator/: hungarian_matching.hpp  pose_estimator.h
launch/: launch.py  launch_optimized.py
scripts/: build_rfdetr_trt.sh  export_rfdetr_onnx.py  test_rfdetr_inference.py
src/: img_bridge.cpp  main.cpp  vision_node.cpp
src/base/: data_syncer.cpp  intrin.cpp  pointcloud_process.cpp  pose.cpp
src/calibration/: board_detector.cpp  calibration.cpp  calibration_node.cpp
src/model/: CMakeLists.txt  detector.cc
src/model/onnx/: detection_impl.cpp
src/model/trt/: CMakeLists.txt  block.cpp  calibrator.cpp  gpu_preprocess.cu  impl.cpp  model.cpp  postprocess.cpp  rfdetr_impl.cpp  yolov8_det.cpp  yolov8_seg.cpp
src/pose_estimator/: pose_estimator.cpp
